[UPD] second part complited

--- a/index.html
+++ b/index.html
@@ -18,3 +18,11 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="sect first">
+            <div class="container">
+                <div class="d-flex">
+                    <div class="img-intro"></div>
+                </div>
+            </div>
+        </section>
