[DONE] finishe exercise

--- a/index.html
+++ b/index.html
@@ -26,3 +26,56 @@
                 </div>
             </div>
         </section>
+        <section class="sect second">
+            <div class="container">
+                <div class="d-flex">
+                    <div class="element first"></div>
+                    <div class="element second"></div>
+                </div>
+            </div>
+        </section>
+        <section class="sect third">
+            <div class="container">
+                <div class="d-flex third">
+                    <div class="element first"></div>
+                    <div class="element second"></div>
+                </div>
+            </div>
+        </section>
+        <section class="sect second">
+            <div class="container">
+                <div class="d-flex">
+                    <div class="element first"></div>
+                    <div class="element second"></div>
+                </div>
+            </div>
+        </section>
+        <section class="sect fourth">
+            <div class="container">
+                <div class="element big-img"></div>
+            </div>
+        </section>
+        <section class="sect fifth">
+            <div class="container">
+                <div class="d-flex">
+                    <div class="element f-first"></div>
+                    <div class="element f-second"></div>
+                    <div class="element f-second"></div>
+                    <div class="element f-second"></div>
+                    <div class="element f-second"></div>
+                </div>
+            </div>
+        </section>
+        <div style="border: 1px solid white;"></div>
+        <footer class="sect fifth">
+            <div class="container">
+                <div class="d-flex foot">
+                    <div class="foot">Logo</div>
+                    <div class="foot">bottone</div>
+                </div>
+            </div>
+        </footer>
+    </main>
+    
+</body>
+</html>
